Improve bulk loading in Table, DatabaseSchema